# ComfyUI-Local-Ollama-Translator

./: .comfyignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: Local_Ollama_Translator_V1_Public_Clean.json
web/: local_ollama_translate.js
